Practica3/obj/Debug/sicxeGramParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\lopez\Desktop\asdasdasd\Practica6\Practica3\sicxeGram.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Practica3 {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class sicxeGramParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, BASE=7, RESW=8, RESB=9, 
		WORD=10, BYTE=11, START=12, END=13, COMMA=14, INSTR1=15, INSTR2_r1r2=16, 
		INSTR2_r1=17, INSTR2_r1n=18, INSTR2_n=19, INSTR3=20, INSTR4=21, FINL=22, 
		REG=23, NUMDEC=24, TEXT=25, NUMHEX_sh=26, NUMHEX=27, CONSTHEX=28, CONSTCAD=29;
	public const int
		RULE_program = 0, RULE_start = 1, RULE_end = 2, RULE_propositions = 3, 
		RULE_proposition = 4, RULE_lineBreak = 5, RULE_directive = 6, RULE_directiveType = 7, 
		RULE_byte = 8, RULE_word = 9, RULE_resb = 10, RULE_resw = 11, RULE_base = 12, 
		RULE_instruction = 13, RULE_format = 14, RULE_f1 = 15, RULE_f2 = 16, RULE_f3 = 17, 
		RULE_f4 = 18, RULE_simple3 = 19, RULE_indirect3 = 20, RULE_immediate3 = 21, 
		RULE_simple4 = 22, RULE_indirect4 = 23, RULE_immediate4 = 24, RULE_num = 25, 
		RULE_label = 26, RULE_const = 27, RULE_reg = 28;
	public static readonly string[] ruleNames = {
		"program", "start", "end", "propositions", "proposition", "lineBreak", 
		"directive", "directiveType", "byte", "word", "resb", "resw", "base", 
		"instruction", "format", "f1", "f2", "f3", "f4", "simple3", "indirect3", 
		"immediate3", "simple4", "indirect4", "immediate4", "num", "label", "const", 
		"reg"
	};

	private static readonly string[] _LiteralNames = {
		null, "',X'", "', X'", "'RSUB'", "'@'", "'#'", "'+RSUB'", "'BASE'", "'RESW'", 
		"'RESB'", "'WORD'", "'BYTE'", "'START'", "'END'", null, null, null, null, 
		null, "'SVC'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, "BASE", "RESW", "RESB", "WORD", 
		"BYTE", "START", "END", "COMMA", "INSTR1", "INSTR2_r1r2", "INSTR2_r1", 
		"INSTR2_r1n", "INSTR2_n", "INSTR3", "INSTR4", "FINL", "REG", "NUMDEC", 
		"TEXT", "NUMHEX_sh", "NUMHEX", "CONSTHEX", "CONSTCAD"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "sicxeGram.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public sicxeGramParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public StartContext start() {
			return GetRuleContext<StartContext>(0);
		}
		public PropositionsContext propositions() {
			return GetRuleContext<PropositionsContext>(0);
		}
		public EndContext end() {
			return GetRuleContext<EndContext>(0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsicxeGramListener typedListener = listener as IsicxeGramListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicxeGramListener typedListener = listener as IsicxeGramListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicxeGramVisitor<TResult> typedVisitor = visitor as IsicxeGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_program);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 58; start();
			State = 59; propositions();
			State = 60; end();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StartContext : ParserRuleContext {
		public LabelContext label() {
			return GetRuleContext<LabelContext>(0);
		}
		public ITerminalNode START() { return GetToken(sicxeGramParser.START, 0); }
		public NumContext num() {
			return GetRuleContext<NumContext>(0);
		}
		public LineBreakContext lineBreak() {
			return GetRuleContext<LineBreakContext>(0);
		}
		public StartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsicxeGramListener typedListener = listener as IsicxeGramListener;
			if (typedListener != null) typedListener.EnterStart(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicxeGramListener typedListener = listener as IsicxeGramListener;
			if (typedListener != null) typedListener.ExitStart(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicxeGramVisitor<TResult> typedVisitor = visitor as IsicxeGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStart(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StartContext start() {
		StartContext _localctx = new StartContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_start);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62; label();
			State = 63; Match(START);
			State = 64; num();
			State = 65; lineBreak();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EndContext : ParserRuleContext {
		public ITerminalNode END() { return GetToken(sicxeGramParser.END, 0); }
		public LabelContext label() {
			return GetRuleContext<LabelContext>(0);
		}
		public LineBreakContext lineBreak() {
			return GetRuleContext<LineBreakContext>(0);
		}
		public EndContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_end; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsicxeGramListener typedListener = listener as IsicxeGramListener;
			if (typedListener != null) typedListener.EnterEnd(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicxeGramListener typedListener = listener as IsicxeGramListener;
			if (typedListener != null) typedListener.ExitEnd(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicxeGramVisitor<TResult> typedVisitor = visitor as IsicxeGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEnd(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EndContext end() {
		EndContext _localctx = new EndContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_end);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 67; Match(END);
			State = 69;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==TEXT) {
				{
				State = 68; label();
				}
			}

			State = 72;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==FINL) {
				{
				State = 71; lineBreak();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropositionsContext : ParserRuleContext {
		public PropositionContext[] proposition() {
			return GetRuleContexts<PropositionContext>();
		}
		public PropositionContext proposition(int i) {
			return GetRuleContext<PropositionContext>(i);
		}
		public LineBreakContext[] lineBreak() {
			return GetRuleContexts<LineBreakContext>();
		}
		public LineBreakContext lineBreak(int i) {
			return GetRuleContext<LineBreakContext>(i);
		}
		public PropositionsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_propositions; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsicxeGramListener typedListener = listener as IsicxeGramListener;
			if (typedListener != null) typedListener.EnterPropositions(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicxeGramListener typedListener = listener as IsicxeGramListener;
			if (typedListener != null) typedListener.ExitPropositions(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicxeGramVisitor<TResult> typedVisitor = visitor as IsicxeGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPropositions(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PropositionsContext propositions() {
		PropositionsContext _localctx = new PropositionsContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_propositions);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__5) | (1L << BASE) | (1L << RESW) | (1L << RESB) | (1L << WORD) | (1L << BYTE) | (1L << INSTR1) | (1L << INSTR2_r1r2) | (1L << INSTR2_r1) | (1L << INSTR2_r1n) | (1L << INSTR2_n) | (1L << INSTR3) | (1L << INSTR4) | (1L << TEXT))) != 0)) {
				{
				{
				State = 74; proposition();
				State = 75; lineBreak();
				}
				}
				State = 81;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropositionContext : ParserRuleContext {
		public InstructionContext instruction() {
			return GetRuleContext<InstructionContext>(0);
		}
		public DirectiveContext directive() {
			return GetRuleContext<DirectiveContext>(0);
		}
		public PropositionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_proposition; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsicxeGramListener typedListener = listener as IsicxeGramListener;
			if (typedListener != null) typedListener.EnterProposition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicxeGramListener typedListener = listener as IsicxeGramListener;
			if (typedListener != null) typedListener.ExitProposition(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicxeGramVisitor<TResult> typedVisitor = visitor as IsicxeGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProposition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PropositionContext proposition() {
		PropositionContext _localctx = new PropositionContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_proposition);
		try {
			State = 84;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,3,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 82; instruction();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 83; directive();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineBreakContext : ParserRuleContext {
		public ITerminalNode FINL() { return GetToken(sicxeGramParser.FINL, 0); }
		public LineBreakContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lineBreak; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsicxeGramListener typedListener = listener as IsicxeGramListener;
			if (typedListener != null) typedListener.EnterLineBreak(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicxeGramListener typedListener = listener as IsicxeGramListener;
			if (typedListener != null) typedListener.ExitLineBreak(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicxeGramVisitor<TResult> typedVisitor = visitor as IsicxeGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLineBreak(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineBreakContext lineBreak() {
		LineBreakContext _localctx = new LineBreakContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_lineBreak);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86; Match(FINL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DirectiveContext : ParserRuleContext {
		public DirectiveTypeContext directiveType() {
			return GetRuleContext<DirectiveTypeContext>(0);
		}
		public LabelContext label() {
			return GetRuleContext<LabelContext>(0);
		}
		public DirectiveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_directive; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsicxeGramListener typedListener = listener as IsicxeGramListener;
			if (typedListener != null) typedListener.EnterDirective(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicxeGramListener typedListener = listener as IsicxeGramListener;
			if (typedListener != null) typedListener.ExitDirective(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicxeGramVisitor<TResult> typedVisitor = visitor as IsicxeGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDirective(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DirectiveContext directive() {
		DirectiveContext _localctx = new DirectiveContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_directive);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 89;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==TEXT) {
				{
				State = 88; label();
				}
			}

			State = 91; directiveType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DirectiveTypeContext : ParserRuleContext {
		public ByteContext @byte() {
			return GetRuleContext<ByteContext>(0);
		}
		public WordContext word() {
			return GetRuleContext<WordContext>(0);
		}
		public ResbContext resb() {
			return GetRuleContext<ResbContext>(0);
		}
		public ReswContext resw() {
			return GetRuleContext<ReswContext>(0);
		}
		public BaseContext @base() {
			return GetRuleContext<BaseContext>(0);
		}
		public DirectiveTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_directiveType; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsicxeGramListener typedListener = listener as IsicxeGramListener;
			if (typedListener != null) typedListener.EnterDirectiveType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicxeGramListener typedListener = listener as IsicxeGramListener;
			if (typedListener != null) typedListener.ExitDirectiveType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicxeGramVisitor<TResult> typedVisitor = visitor as IsicxeGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDirectiveType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DirectiveTypeContext directiveType() {
		DirectiveTypeContext _localctx = new DirectiveTypeContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_directiveType);
		try {
			State = 98;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case BYTE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 93; @byte();
				}
				break;
			case WORD:
				EnterOuterAlt(_localctx, 2);
				{
				State = 94; word();
				}
				break;
			case RESB:
				EnterOuterAlt(_localctx, 3);
				{
				State = 95; resb();
				}
				break;
			case RESW:
				EnterOuterAlt(_localctx, 4);
				{
				State = 96; resw();
				}
				break;
			case BASE:
				EnterOuterAlt(_localctx, 5);
				{
				State = 97; @base();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ByteContext : ParserRuleContext {
		public ITerminalNode BYTE() { return GetToken(sicxeGramParser.BYTE, 0); }
		public ConstContext @const() {
			return GetRuleContext<ConstContext>(0);
		}
		public ByteContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_byte; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsicxeGramListener typedListener = listener as IsicxeGramListener;
			if (typedListener != null) typedListener.EnterByte(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicxeGramListener typedListener = listener as IsicxeGramListener;
			if (typedListener != null) typedListener.ExitByte(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicxeGramVisitor<TResult> typedVisitor = visitor as IsicxeGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitByte(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ByteContext @byte() {
		ByteContext _localctx = new ByteContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_byte);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100; Match(BYTE);
			State = 101; @const();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WordContext : ParserRuleContext {
		public ITerminalNode WORD() { return GetToken(sicxeGramParser.WORD, 0); }
		public NumContext num() {
			return GetRuleContext<NumContext>(0);
		}
		public WordContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_word; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsicxeGramListener typedListener = listener as IsicxeGramListener;
			if (typedListener != null) typedListener.EnterWord(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicxeGramListener typedListener = listener as IsicxeGramListener;
			if (typedListener != null) typedListener.ExitWord(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicxeGramVisitor<TResult> typedVisitor = visitor as IsicxeGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWord(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WordContext word() {
		WordContext _localctx = new WordContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_word);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 103; Match(WORD);
			State = 104; num();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ResbContext : ParserRuleContext {
		public ITerminalNode RESB() { return GetToken(sicxeGramParser.RESB, 0); }
		public NumContext num() {
			return GetRuleContext<NumContext>(0);
		}
		public ResbContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_resb; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsicxeGramListener typedListener = listener as IsicxeGramListener;
			if (typedListener != null) typedListener.EnterResb(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicxeGramListener typedListener = listener as IsicxeGramListener;
			if (typedListener != null) typedListener.ExitResb(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicxeGramVisitor<TResult> typedVisitor = visitor as IsicxeGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitResb(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ResbContext resb() {
		ResbContext _localctx = new ResbContext(_ctx, State);
		EnterRule(_localctx, 20, RULE_resb);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106; Match(RESB);
			State = 107; num();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ReswContext : ParserRuleContext {
		public ITerminalNode RESW() { return GetToken(sicxeGramParser.RESW, 0); }
		public NumContext num() {
			return GetRuleContext<NumContext>(0);
		}
		public ReswContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_resw; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsicxeGramListener typedListener = listener as IsicxeGramListener;
			if (typedListener != null) typedListener.EnterResw(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicxeGramListener typedListener = listener as IsicxeGramListener;
			if (typedListener != null) typedListener.ExitResw(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicxeGramVisitor<TResult> typedVisitor = visitor as IsicxeGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitResw(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ReswContext resw() {
		ReswContext _localctx = new ReswContext(_ctx, State);
		EnterRule(_localctx, 22, RULE_resw);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109; Match(RESW);
			State = 110; num();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BaseContext : ParserRuleContext {
		public ITerminalNode BASE() { return GetToken(sicxeGramParser.BASE, 0); }
		public LabelContext label() {
			return GetRuleContext<LabelContext>(0);
		}
		public BaseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_base; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsicxeGramListener typedListener = listener as IsicxeGramListener;
			if (typedListener != null) typedListener.EnterBase(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicxeGramListener typedListener = listener as IsicxeGramListener;
			if (typedListener != null) typedListener.ExitBase(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicxeGramVisitor<TResult> typedVisitor = visitor as IsicxeGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBase(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BaseContext @base() {
		BaseContext _localctx = new BaseContext(_ctx, State);
		EnterRule(_localctx, 24, RULE_base);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 112; Match(BASE);
			State = 113; label();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
